"Hawaii.sqlite june-dec climate data analysis"

--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -167,7 +167,7 @@
    "outputs": [],
    "source": [
     "# Find the Date One Year Ago\n",
-    "prev_year = dt.date(2017, 8, 23) - dt.timedelta(days=365)\n"
+    "  \n"
    ]
   },
   {
@@ -262,7 +262,7 @@
    "outputs": [],
    "source": [
     "## Use the set_index() Function.\n",
-    "# etting inplace=True, we're saying that we do not want to create a new DataFrame with the modified specifications. \n",
+    "# setting inplace=True, we're saying that we do not want to create a new DataFrame with the modified specifications. \n",
     "# If we set it to \"False,\" then we would create a new DataFrame.\n",
     "df.set_index(df['date'], inplace=True)"
    ]
@@ -5268,188 +5268,6 @@
    "metadata": {},
    "source": [
     "## Incorporate Flask into Data Analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##Building Flask Routes (Routes are a core Flask concept.)\n",
-    "##  routes are pathways that a search can take.\n",
-    "\n",
-    "# Set Up Flask and Create a Route.\n",
-    "## Course of actions : \n",
-    "#1. Install Flask, \n",
-    "#2. Create a new Python file\n",
-    "#3. Import the Flask dependency.\n",
-    "#4. Create a new Flask app instance.\n",
-    "#5. Create Flask routes.\n",
-    "#6. Run a Flask app."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Create a New Python File and Import the Flask Dependency\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# We can view all of the classes that automap found\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save references to each table\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create our session (link) from Python to the DB\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Exploratory Climate Analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Design a query to retrieve the last 12 months of precipitation data and plot the results. \n",
-    "#Starting from the last data point in the database. \n",
-    "\n",
-    "# Calculate the date one year from the last date in data set.\n",
-    "\n",
-    "# Perform a query to retrieve the data and precipitation scores\n",
-    "\n",
-    "# Save the query results as a Pandas DataFrame and set the index to the date column\n",
-    "\n",
-    "# Sort the dataframe by date\n",
-    "\n",
-    "# Use Pandas Plotting with Matplotlib to plot the data\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use Pandas to calcualte the summary statistics for the precipitation data\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# How many stations are available in this dataset?\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# What are the most active stations?\n",
-    "# List the stations and the counts in descending order.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Using the station id from the previous query, calculate the lowest temperature recorded, \n",
-    "# highest temperature recorded, and average temperature most active station?\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Choose the station with the highest number of temperature observations.\n",
-    "# Query the last 12 months of temperature observation data for this station and plot the results as a histogram\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Write a function called `calc_temps` that will accept start date and end date in the format '%Y-%m-%d' \n",
-    "# and return the minimum, average, and maximum temperatures for that range of dates\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Challenge"
    ]
   },
   {
