--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -9,17 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting sqlalchemy\n",
-      "  Downloading SQLAlchemy-1.3.20-cp37-cp37m-win_amd64.whl (1.2 MB)\n",
-      "Installing collected packages: sqlalchemy\n",
-      "Successfully installed sqlalchemy-1.3.20\n"
+      "Requirement already satisfied: sqlalchemy in c:\\users\\ekanga patrick\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (1.3.20)\n"
      ]
     }
    ],
@@ -29,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +116,7 @@
        "['measurement', 'station']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,12 +125,12 @@
     "# View Classes Found by Automap\n",
     "## Base.classes gives us access to all the classes.\n",
     "## keys() references all the names of the classes.\n",
-    "Base.classes.keys()\n"
+    "Base.classes.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,12 +142,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create Session Link to the Database. The session essentially allows us to query for data.\n",
-    "session = Session(engine)\n"
+    "session = Session(engine)"
    ]
   },
   {
@@ -162,29 +159,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Find the Date One Year Ago\n",
-    "  \n"
+    "# Find the Date One Year Ago(adding the dt.timedelta() function is helpful)\n",
+    "prev_year = dt.date(2017, 8, 23) - dt.timedelta(days=365)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Retrieve the Precipitation Scores\n",
     "results = []\n",
-    "\n",
-    "results = session.query(Measurement.date, Measurement.prcp)\n"
+    "results = session.query(Measurement.date, Measurement.prcp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -245,19 +241,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "## In order to save our results as a DataFrame, we need to provide our results variable as one parameter and specify \n",
     "## the column names as our second parameter\n",
-    "\n",
     "df = pd.DataFrame(results, columns=['date','precipitation'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -296,12 +291,12 @@
    ],
    "source": [
     "## Print the DataFrame With and Without the Index\n",
-    "print(df)\n"
+    "print(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2544,7 +2539,7 @@
    ],
    "source": [
     "# Print the DataFrame without the index so you can see just the date and precipitation\n",
-    "print(df.to_string(index=False))\n"
+    "print(df.to_string(index=False))"
    ]
   },
   {
@@ -2556,17 +2551,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Sort the values by date using the sort_index() function\n",
-    "df = df.sort_index()\n"
+    "df = df.sort_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -4809,7 +4804,7 @@
    ],
    "source": [
     "## Use this code to print the sorted list without the index\n",
-    "print(df.to_string(index=False))\n"
+    "print(df.to_string(index=False))"
    ]
   },
   {
@@ -4821,7 +4816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -4830,7 +4825,7 @@
        "<AxesSubplot:xlabel='date'>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4847,7 +4842,7 @@
    ],
    "source": [
     "#use the df.plot() function\n",
-    "df.plot()\n"
+    "df.plot()"
    ]
   },
   {
@@ -4859,7 +4854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -4935,14 +4930,14 @@
        "max         6.700000"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# use the describe() function to calculate the mean, minimum, maximum, standard deviation, and percentiles\n",
-    "df.describe()\n"
+    "df.describe()"
    ]
   },
   {
@@ -4954,7 +4949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -4963,7 +4958,7 @@
        "[(9)]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4972,7 +4967,7 @@
     "# adding the starting point for our query\n",
     "session.query()\n",
     "# add the .all() function to the end of this query so that our results are returned as a list.\n",
-    "session.query(func.count(Station.station)).all()\n"
+    "session.query(func.count(Station.station)).all()"
    ]
   },
   {
@@ -4984,16 +4979,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.orm.query.Query at 0x1c6c0ae0dc8>"
+       "<sqlalchemy.orm.query.Query at 0x299f9d4e0c8>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5005,16 +5000,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.orm.query.Query at 0x1c6c0ae6508>"
+       "<sqlalchemy.orm.query.Query at 0x299f9cd8048>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5026,7 +5021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -5043,7 +5038,7 @@
        " ('USC00518838', 511)]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5069,7 +5064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -5078,7 +5073,7 @@
        "[(54.0, 85.0, 71.66378066378067)]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5095,7 +5090,7 @@
     "#add the .all() function to return results as a list\n",
     "session.query(func.min(Measurement.tobs), func.max(Measurement.tobs), func.avg(Measurement.tobs)).\\\n",
     "filter(Measurement.station == 'USC00519281').all()\n",
-    "# reflect the tables\n"
+    "# reflect the tables"
    ]
   },
   {
@@ -5107,7 +5102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -5129,12 +5124,12 @@
     "results = session.query(Measurement.tobs).\\\n",
     "filter(Measurement.station == 'USC00519281').\\\n",
     "filter(Measurement.date >= prev_year).all()\n",
-    "print(results)\n"
+    "print(results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -5228,7 +5223,7 @@
        "[352 rows x 1 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5236,12 +5231,12 @@
    "source": [
     "#Convert the Temperature Observation Results to a DataFrame (for easy reading for investors)\n",
     "df = pd.DataFrame(results, columns=['tobs'])\n",
-    "df\n"
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -5260,7 +5255,7 @@
     "## use the plot() function and the hist() function and add the number of bins as a parameter.\n",
     "df.plot.hist(bins=12)\n",
     "#compress the x-axis by Using plt.tight_layout(). This is for the plot to fit into the box holding our plot\n",
-    "plt.tight_layout()\n"
+    "plt.tight_layout()"
    ]
   },
   {
@@ -5269,13 +5264,6 @@
    "source": [
     "## Incorporate Flask into Data Analysis"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
